--- a/config/locales/fra/pack.company.yml
+++ b/config/locales/fra/pack.company.yml
@@ -34,14 +34,14 @@ fra:
       _department_form:
         subtitle: 'Renseignez les différentes caractéristiques du service'
       department_update:
-        title: 'Modification du service'
+        title: 'Modifier le service : {{name}}'
       departments:
         department_create: 'Ajouter un nouveau service'
-        title: 'Services de la société'
+        title: 'Services'
       document_template_create:
         title: 'Création d''un modèle de document'
       document_template_update:
-        title: 'Modification du modèle de document "{{value}}"'
+        title: 'Modification du modèle de document : {{name}}'
       document_templates:
         document_template_create: 'Créer un modèle de document'
         title: 'Modèles de document'
@@ -54,7 +54,7 @@ fra:
       _establishment_form:
         subtitle: 'Renseignez les différentes caractéristiques de l''établissement'
       establishment_update:
-        title: 'Modification de l''établissement'
+        title: 'Modification de l''établissement : {{name}}'
       establishments:
         establishment_create: 'Ajouter un nouvel établissement'
         title: 'Établissements'
@@ -154,7 +154,7 @@ fra:
       _sequence_form:
         subtitle: 'Caractéristiques de la séquence'
       sequence_update:
-        title: 'Modification de la séquence {{value}}'
+        title: 'Modification de la séquence : {{name}}'
       sequences:
         sequence_create: 'Ajouter une séquence'
         sequences_load: 'Charger les séquences manquantes'
@@ -162,7 +162,7 @@ fra:
       unit_create:
         title: 'Ajout d''une nouvelle unité de mesure'
       unit_update:
-        title: 'Modification de l''unité {{label}}'
+        title: 'Modification de l''unité : {{label}}'
       units:
         title: 'Unités de mesure'
         unit_create: 'Ajouter une nouvelle unité de mesure'
