--- a/config/locales/fra/pack.production.yml
+++ b/config/locales/fra/pack.production.yml
@@ -39,7 +39,7 @@ fra:
       operation_nature_create:
         title: 'Créer un nouveau type de travail'
       operation_nature_update:
-        title: 'Modification du type de travail "{{name}}"'
+        title: 'Modification du type de travail : {{name}}'
       operation_natures:
         operation_nature_create: 'Créer un nouveau type de travail'
         title: 'Types de travail'
@@ -49,39 +49,6 @@ fra:
         operation_create: 'Créer un nouveau travail'
         title: 'Travaux'
         unvalidated_operations: 'Travaux non validés'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/production/production_create
-      production_create:
-        title: 'Enregistrer une nouvelle production'
-      # Unfound view ./app/views/production/_production_form
-      _production_form:
-        infos: 'Renseignez les caractéristiques de la production'
-        production_legend_one: ' mp : matières premières'
-        production_legend_two: ' nc : nombre de composants '
-      # No defined action for this view !!!
-      # Unfound view ./app/views/production/production_line_create
-      production_line_create:
-        title: 'Gérer les quantités utilisées '
-      # Unfound view ./app/views/production/_production_line_form
-      _production_line_form:
-        name: 'Nom'
-        quantity: 'Quantité'
-        total_quantity: 'Quantité totale produite'
-        unit: 'Unité'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/production/production_line_update
-      production_line_update:
-        title: 'Modifier les quantités utilisées'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/production/production_update
-      production_update:
-        title: 'Modification de la production {{value}} du {{moved}}'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/production/productions
-      productions:
-        production_create: 'Enregistrer un nouvelle production'
-        productions: 'Productions'
-        title: 'Productions'
       shape:
         operation_create: 'Ajouter un travail'
         operations: 'Travaux'
@@ -93,7 +60,7 @@ fra:
       _shape_form:
         infos: 'Renseignez les caractéristiques de l''îlot'
       shape_update:
-        title: 'Modification de l'' îlot {{name}}'
+        title: 'Modification de l'' îlot : {{name}}'
       shapes:
         shape_create: 'Créer un nouvel îlot'
         shapes: 'Îlots' #!
@@ -111,7 +78,7 @@ fra:
       tool_create:
         title: 'Ajouter un matériel'
       tool_update:
-        title: 'Modification du matériel {{name}}'
+        title: 'Modification du matériel : {{name}}'
       tools:
         title: 'Matériel'
         tool_create: 'Ajouter un matériel'
