--- a/config/locales/spa/notifications.yml
+++ b/config/locales/spa/notifications.yml
@@ -59,6 +59,7 @@ spa:
     #>password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
     #>prices_import_succeeded: 'Vos données ont été correctement importées'
     #>print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).'
+    #>record_cannot_be_removed: '(((RECORD_CANNOT_BE_REMOVED)))'
     #>record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement'
     #>record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement'
     #>restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}'
@@ -78,3 +79,4 @@ spa:
       #>zero: 'Il n''y a pas d''écritures à pointer pour l''instant'
     #>you_must_have_an_email_column: 'Vous devez avoir une colonne Email dans votre extraction'
     #>you_must_select_a_file_to_import: 'Vous devez sélectionner un fichier à importer'
+    #>you_will_lose_all_your_current_data: 'Si vous continuez, vous allez perdre toutes vos données en cours de saisie. Voulez-vous poursuivre ?'
