Fixes the HTML popupization and floating buttons.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1468 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -982,10 +982,10 @@ fra:
         created_at: 'Créé le'
         creator: 'Créateur'
         creator_id: 'Créateur'
-        entity1: 'Fiche'
-        entity1_id: 'Fiche'
-        entity2: 'Fiche'
-        entity2_id: 'Fiche'
+        entity1: 'Fiche 1'
+        entity1_id: 'Fiche 1'
+        entity2: 'Fiche 2'
+        entity2_id: 'Fiche 2'
         id: 'ID'
         lock_version: 'Version'
         nature: 'Lien'
