--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -146,10 +146,15 @@ spa:
         #>account_balances: 'Balances de compte'
         #>accounts: 'Comptes'
         #>areas: 'Zones postales'
+        #>available_prices: 'Prix disponibles'
+        #>available_products: 'Produits disponibles'
         #>bank_account_statements: 'Relevés de compte bancaire'
         #>bank_accounts: 'Comptes bancaires'
         #>bank_journal: 'Journal de banque'
+        #>banks_accounts: 'Comptes comptables de banque'
         #>born_on: 'Créée le'
+        #>charges_accounts: 'Comptes de charge'
+        #>client_accounts: 'Comptes clients'
         #>code: 'Code interne'
         #>complement_choices: 'Choix de champ complémentaire'
         #>complement_data: 'Données complémentaires de fiche'
@@ -215,6 +220,7 @@ spa:
         #>product_components: 'Composants de produit'
         #>productable_products: 'Produits produisibles'
         #>products: 'Produits'
+        #>products_accounts: 'Comptes produits'
         #>professions: 'Professions'
         #>purchase_order_lines: 'Lignes d''achat'
         #>purchase_orders: 'Achats'
@@ -225,6 +231,8 @@ spa:
         #>sale_orders: 'Ventes'
         #>sales_conditions: 'Conditions Générales de Vente'
         #>sales_journal: 'Journal de Ventes'
+        #>self_bank_accounts: 'Comptes bancaires en propre'
+        #>self_contacts: 'Contacts en propre'
         #>sequences: 'Séquences'
         #>shapes: 'Îlots'
         #>shelves: 'Catégories de produit'
@@ -234,12 +242,16 @@ spa:
         #>stocks: 'Stocks de produit'
         #>subscription_natures: 'Types d''abonnement'
         #>subscriptions: 'Abonnement'
+        #>supplier_accounts: 'Comptes fournisseurs'
+        #>suppliers: 'Fournisseurs'
+        #>surface_units: 'Unités de surface'
         #>tax_declarations: 'Déclarations de taxes'
         #>taxes: 'Taxes'
         #>tool_uses: 'Utilisations d''outil'
         #>tools: 'Outils'
         #>trackings: 'Lots traçables'
         #>transfers: 'Transferts'
+        #>transporters: 'Transporteurs'
         #>units: 'Unités'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
@@ -686,10 +698,10 @@ spa:
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>entity1: 'Fiche'
-        #>entity1_id: 'Fiche'
-        #>entity2: 'Fiche'
-        #>entity2_id: 'Fiche'
+        #>entity1: 'Fiche 1'
+        #>entity1_id: 'Fiche 1'
+        #>entity2: 'Fiche 2'
+        #>entity2_id: 'Fiche 2'
         #>id: 'ID'
         #>lock_version: 'Version'
         #>nature: 'Lien'
@@ -1689,7 +1701,7 @@ spa:
         #>reduction: 'Ligne de réduction'
         #>reduction_origin: 'Ligne soumise à réduction'
         #>reduction_origin_id: 'Ligne soumise à réduction'
-        #>reductions: '(((REDUCTIONS)))'
+        #>reductions: 'Lignes de réductions'
         #>tax: 'Taxe'
         #>tax_id: 'Taxe'
         #>tracking: 'Lot'
