--- a/config/locales/fra/help/company-about.txt
+++ b/config/locales/fra/help/company-about.txt
@@ -1,3 +1,3 @@
-====== À propos de l'_À propos_... ======
+====== À propos de l'//À propos//... ======
 
 Juste une petite page pour dire d'où vient **Ekylibre**.
