--- a/config/locales/jpn/pack.management.yml
+++ b/config/locales/jpn/pack.management.yml
@@ -629,17 +629,17 @@ jpn:
         #>deliveries: 'Livraisons'
         #>title: 'Transport du {{value}}'
       transport_create:
-        #>info: 'Renseignez les informations du transport'
         #>title: 'Ajout d''un nouveau transport'
+      transport_deliveries:
+        #>title: 'Livraisons du transport'
       _transport_deliveries:
         #>add: 'Ajouter la livraison au transport'
         #>add_delivery: 'Ajouter une livraison'
         #>back: 'Valider et revenir à la liste des transports'
         #>delivery: 'Livraison'
-      transport_deliveries:
-        #>title: 'Livraisons du transport'
-      transport_update:
+      _transport_form:
         #>info: 'Renseignez les informations du transport'
+      transport_update:
         #>title: 'Modification du transport'
         #>transport_deliveries: 'Livraisons du transport'
       transports:
