--- a/config/locales/fra/notifications.yml
+++ b/config/locales/fra/notifications.yml
@@ -26,8 +26,8 @@ fra:
     need_company_code_to_login: 'Vous devez saisir votre nom d''utilisateur accompagné de votre code société. Exemple : SOCIETE\jean'
     need_entries_to_letter: 'Vous devez avoir des écritures verrouillées enregistrées au compte client et fournisseur.'# NOT USED !!!
     need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
-    need_financialyear_to_consult_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir consulter des écritures.'
-    need_journal_to_consult_record_entries: 'Vous devez créer un journal pour pouvoir consulter des écritures à l''intérieur.'
+    need_financialyear_to_consult_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir consulter des écritures.'# NOT USED !!!
+    need_journal_to_consult_record_entries: 'Vous devez créer un journal pour pouvoir consulter des écritures à l''intérieur.'# NOT USED !!!
     need_journal_to_record_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.'
     need_location_to_create_purchase_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser un achat'
     need_location_to_create_sale_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser une vente'
