--- a/config/locales/fra/pack.company.yml
+++ b/config/locales/fra/pack.company.yml
@@ -130,6 +130,7 @@ fra:
         query: 'Requête: '
         subtitle: 'Vous pouvez modifier les informations générales de l''extraction'
         title: 'Modification de l''extraction {{value}}'
+        #>listing_mail: # Potentially missing translation
       listings:
         listing_create: 'Créer une nouvelle extraction'
         title: 'Extractions de données'
