Fixes some bugs and begins #122
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1480 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/jpn/pack.company.yml
+++ b/config/locales/jpn/pack.company.yml
@@ -126,6 +126,7 @@ jpn:
       listing_update:
         #>data_to_extract: 'Données à extraire'
         #>listing_extract: 'Éxécuter l''extraction'
+        #>listing_mail: 'Envoyer un courriel'
         #>query: 'Requête: '
         #>subtitle: 'Vous pouvez modifier les informations générales de l''extraction'
         #>title: 'Modification de l''extraction {{value}}'
